--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "0.0.19",
     "@react-email/html": "0.0.8",
+    "@vercel/speed-insights": "^1.0.12",
     "ai": "^3.3.5",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
